--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <nav class="site-header navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="../assets/images/logo.png" alt="Logo de l'application" height="24" width="24">
+          <img src="assets/images/logo.png" alt="Logo de l'application" height="24" width="24">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
           aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -153,7 +153,7 @@
           <div data-bs-target="#myCarousel" data-bs-slide-to="8" aria-label="Slide 9" class="bi bi-circle"></div>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active" style="background-image: url('../assets/images/slide_4.png');">
+          <div class="carousel-item active" style="background-image: url('assets/images/slide_4.png');">
             <div class="container-item">
               <h1 class="avantagegros">Salaire</h1>
               <p class="avantagepetit">La somme de toute vos rentrées d'argent par mois</p>
@@ -161,7 +161,7 @@
                 aria-describedby="button-addon2" id="salaire">
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('../assets/images/slide_1.png');">
+          <div class="carousel-item" style="background-image: url('assets/images/slide_1.png');">
             <div class="container-item">
               <h1 class="avantagegros">Loyer</h1>
               <p class="avantagepetit">Le coût de votre loyer par mois</p>
@@ -169,7 +169,7 @@
                 aria-describedby="button-addon2" id="loyer">
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('../assets/images/slide_2.png');">
+          <div class="carousel-item" style="background-image: url('assets/images/slide_2.png');">
             <div class="container-item">
               <h1 class="avantagegros">Assurance Habitation</h1>
               <p class="avantagepetit">Correspond au prix de votre assurance habiation par mois</p>
@@ -177,7 +177,7 @@
                 aria-describedby="button-addon2" id="assurance_habitation">
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('../assets/images/slide_3.png');">
+          <div class="carousel-item" style="background-image: url('assets/images/slide_3.png');">
             <div class="container-item">
               <h1 class="avantagegros">Assurance Auto</h1>
               <p class="avantagepetit">Correspond au prix de votre assurance auto par mois</p>
@@ -185,7 +185,7 @@
                 aria-describedby="button-addon2" id="assurance_voiture">
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('../assets/images/slide_4.png');">
+          <div class="carousel-item" style="background-image: url('assets/images/slide_4.png');">
             <div class="container-item">
               <h1 class="avantagegros">Electricité et Gaz</h1>
               <p class="avantagepetit">Coresspond à ce que vous dépensez en énergie par mois</p>
@@ -193,7 +193,7 @@
                 aria-describedby="button-addon2" id="electricite_gaz">
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('../assets/images/slide_5.png');">
+          <div class="carousel-item" style="background-image: url('assets/images/slide_5.png');">
             <div class="container-item">
               <h1 class="avantagegros">Achat de nourriture</h1>
               <p class="avantagepetit">Correspond à l'ensemble des dépenses liées au course et au nécéssaire de vie</p>
@@ -201,7 +201,7 @@
                 aria-describedby="button-addon2" id="course_alimentaire">
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('../assets/images/slide_6.png');">
+          <div class="carousel-item" style="background-image: url('assets/images/slide_6.png');">
             <div class="container-item">
               <h1 class="avantagegros">Téléphone et internet</h1>
               <p class="avantagepetit">Correspond à votre abonnement téléphonique et internet</p>
@@ -209,7 +209,7 @@
                 aria-describedby="button-addon2" id="abonnement">
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('../assets/images/slide_3.png');">
+          <div class="carousel-item" style="background-image: url('assets/images/slide_3.png');">
             <div class="container-item">
               <h1 class="avantagegros">Loisir</h1>
               <p class="avantagepetit">Correspond aux dépenses de loisir(s) récurentes</p>
@@ -217,7 +217,7 @@
                 aria-describedby="button-addon2" id="loisir">
             </div>
           </div>
-          <div class="carousel-item" style="background-image: url('../assets/images/slide_6.png');">
+          <div class="carousel-item" style="background-image: url('assets/images/slide_6.png');">
             <div class="container-item text-center">
               <h1 class="avantagegros">Verifiez votre budget</h1>
               <p class="avantagepetit">Bien joué, vous êtes arrivé jusqu'au bout, cliquez ci dessous pour analayser
